Reorganized code: - renamed templates for dummy controller; Fixed: - white spaces; - font-size for popeye counter of pages;

--- a/horosh/public/app/popeye/css/jquery.popeye.style.css
+++ b/horosh/public/app/popeye/css/jquery.popeye.style.css
@@ -112,7 +112,7 @@
     bottom:         0px;
     right:          0px;
     font-style:     italic;
-    font-size:      0.9em;
+    font-size:      1.2em;
     background:     #000;
     color:          #f7f7f7;
     opacity:        0.7;
